Sun Mar  7 21:03:15 1999  Mark-Jason Dominus  <mjd@plover.com>

	* Template.pm: Version 1.20:
	
	Added support for DELIMTER options: Check for it in ->new and
 		->fill_in Pass to ->compile if necessary.
		
	Added a new test file and documentation for this option.
	
	new function _acquire_data for turning template objects into
 	template-STRING objects.
	
	Fixed Jonathan Roy's bug about HASH options that contain undefined
 	values for variables.  He reported a warning.  This was
 	incidental: The `undef' wasn't actually working.  It works now and
 	also omits the spurious warning.  Added tests for this bug.

Sun Feb 28 18:17:24 1999  Mark-Jason Dominus  <mjd@plover.com>

	* Version 1.12:

	Fixed missing @ISA bug.
	
	Added TYPE parameter checking to new().  Handling of TYPE option
 	is now case-insensitive.
	
	Minor doc fixes.

Thu Feb 25 11:32:14 1999  Mark-Jason Dominus  <mjd@plover.com>

	*  Version 1.11:

	Template.pm: Changes to tokenizer and lexer to support new
 	backslash behavior.
	
	Documentation for same.
	
	Other misc. documentation fixes.

Sat Feb 13 14:34:03 1999  Mark-Jason Dominus  <mjd@plover.com>

	* Version 1.10:
	
	Added `require 5.004' to prevent people from being so confused
 	when they try it with 5.003.  Shabbir will help those people.
  	Thanks Shabbir!
	
	Worked around Perl bug having to do with $x = <FH> when $x
 	contains a glob.
	
	New OUTPUT option.
	
	Reworked handling of packages and hashes with SAFE option.
  	Upshot: It works now.
	
	Hash installation broken out into a separate function.  Document
 	it?
	
	New super-duper $OUT feature as perl Ranjit's suggestion.
	
	Fixed minor bug: Evalutaion of template that actually yielded
 	`undef' in the normal way would also yield an undefined value
 	warning.
	
	Return value of fill_in with OUTPUT option is still true.
	
	Documentation brought up to date: HASH OUTPUT $OUT Notes about
 		interaction of SAFE with HASH and PACKAGE.  Minor errors