@@ -2,15 +2,16 @@
 #
 # test apparatus for Text::Template module
 # still incomplete.
+#
 
 use lib '../blib/lib';
 use Text::Template;
 
-die "This is the test program for Text::Template version 1.23
+die "This is the test program for Text::Template version 1.31
 You are using version $Text::Template::VERSION instead.
 That does not make sense.\n
 Aborting"
-  unless $Text::Template::VERSION == 1.23;
+  unless $Text::Template::VERSION == 1.31;
 
 print "1..1\n";
 
@@ -50,6 +51,7 @@ $n++;
 # it's a totally different code path.
 # Decision: Put that into safe.t, because that file should
 # be skipped when Safe.pm is unavailable.
+
 
 exit;
 
